         doc-base-unknown-section in two tags)
      - embedded-pear-module
      - embedded-php-library
      - improbable-bug-number-in-closes
      - maintainer-also-in-uploaders
      - maintainer-script-ignores-errors
      - manpage-has-errors-from-pod2man
      - ored-build-depends-on-obsolete-package (actually a split of
         build-depends-on-obsolete-package in two tags)
    + Removed:
      - package-needs-python-policy-debhelper
  
  * checks/*.desc:
    + [ADB] Fix a number of spelling mistakes and typoes.
  * checks/changelog-file{,.desc}:
    + [RA] Warn about closing a bug number less than 100; this is likely
      a typo or placeholder.  Thanks, Raphael Geissert.  (Closes: #497350)
  * checks/debconf:
    + [ADB] Avoid flagging a template as unused if its definition is
      followed by a string of whitespace.
  * checks/debhelper{,.desc}:
    + [FL] Do not require versioned build-depends for compat level 5
      anymore.  Sarge is not supported anymore.  (Closes: #496826)
    + [FL] Drop package-needs-python-policy-debhelper.  Sarge is not
      supported anymore.
  * checks/description{,.desc}:
    + [FL] Warn about left-over dh-make-perl statement.
  * checks/fields{,.desc}:
    + [RA] Check for a maintainer also listed in uploaders.  Patch from
      Raphael Geissert.
    + [ADB] Don't issue an error tag for obsolete packages in Build-Depends
      fields if the package is part of an "ORed group" of packages and is
      not listed first.  As with Depends, an info tag will still be issued
      for such packages.  (Closes: #496875)
    + [FL] Check Enhances together with the other relational fields.
    + [FL] Add ant to @rule_clean_depends.  (Closes: #498135)
    + [FL] Due to a logical error "source-field-malformed" was never actually
      checked.  Patch by Raphael Geissert.  (Closes: #498197)
  * checks/files{,.desc}:
    + [RA,FL] Patches from Raphael Geissert:
      - Check for embedding copies of jsjac and jsMath.