@@ -597,6 +597,12 @@ foreach my $file (sort keys %{$info->index}) {
 	    tag "script-with-language-extension", "$file";
 	}
 
+	# ---------------- Devel files for Windows
+	if ($file =~ m,/.+\.(vcproj|sln|dsp|dsw)(\.gz)?$,
+	    and $file !~ m,^usr/share/doc/,) {
+	    tag "windows-devel-file-in-package", "$file";
+	}
+
 	# ---------------- Autogenerated databases from other OSes
 	if ($file =~ m,/Thumbs\.db(\.gz)?$,i) {
 	    tag "windows-thumbnail-database-in-package", "$file";
