@@ -1,0 +1,1 @@
+W: files-windows-devel-file-in-package: windows-devel-file-in-package usr/lib/foo/foo.vcproj
