@@ -1,0 +1,8 @@
+default:
+	:
+
+install:
+	install -d $(DESTDIR)/usr/lib/foo
+	install -m644 foo.vcproj $(DESTDIR)/usr/lib/foo/foo.vcproj
+
+.PHONY: distclean realclean clean install test check
